--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "formik": "^2.4.6",
     "graphql": "^16.9.0",
     "lucide-react": "^0.427.0",
