--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.3",
     "formik": "^2.4.6",
     "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "react": "^18",
